# Sae

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: quick_start.py
examples/contracts/: sample_nda.txt
src/sae/: __init__.py  config.py  main.py
src/sae/agents/: __init__.py  contract_review.py  state.py
src/sae/agents/nodes/: __init__.py  analyze_risks.py  extract_clauses.py  generate_recommendations.py
src/sae/api/: __init__.py  agent_card.py  dependencies.py  jsonrpc.py  streaming.py
src/sae/models/: __init__.py  a2a.py  clauses.py
src/sae/services/: __init__.py  document_parser.py  task_manager.py
tests/: conftest.py
tests/fixtures/: mock_llm_responses.py  sample_contracts.py  sample_files.py
tests/integration/: test_full_workflow.py
tests/unit/: test_config.py
tests/unit/agents/: test_contract_review.py
tests/unit/agents/nodes/: __init__.py  test_analyze_risks.py  test_extract_clauses.py  test_generate_recommendations.py
tests/unit/api/: test_agent_card.py  test_dependencies.py  test_jsonrpc.py  test_main.py  test_streaming.py
tests/unit/models/: test_a2a.py  test_clauses.py
tests/unit/services/: test_document_parser.py  test_task_manager.py
